--- a/ppe-frontend/package.json
+++ b/ppe-frontend/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@tanstack/react-router": "^1.135.2",
     "@tanstack/router-devtools": "^1.135.2",
+    "@types/leaflet": "^1.9.21",
     "autoprefixer": "^10.4.22",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.553.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-leaflet": "^5.0.0",
     "recharts": "^3.4.1",
     "tailwind-merge": "^3.4.0"
   },
