--- a/ppe-frontend/package.json
+++ b/ppe-frontend/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.553.0",
+    "luxon": "^3.7.2",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -29,6 +30,7 @@
     "@eslint/js": "^9.39.1",
     "@tanstack/router-plugin": "^1.135.2",
     "@tanstack/router-vite-plugin": "^1.135.2",
+    "@types/luxon": "^3.7.1",
     "@types/node": "^24.10.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
